--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 		<section class="cover show" style="background: linear-gradient(to left bottom, hsl(137, 100%, 85%) 0%,hsl(65, 100%, 85%) 100%)">
 			<div class="cover-main">
 				<img src="https://q2.qlogo.cn/headimg_dl?bs=qq&dst_uin=1470419835&src_uin=1470419835&fid=1470419835&spec=100&url_enc=0&referer=bu_interface&term_type=PC" width="100px">
-				<blockquote><p><span style="line-height:1.8rem;font-weight:400;font-size:1.3rem">Copyright © 华纯网络 2019 - 2022<span></span></span></p></blockquote>
-				<p><a href="https://pay.vatione.cn/">进入华纯易支付</a></p>
+				<p><span style="line-height:1.8rem;font-weight:400;font-size:1.3rem" ><a href="https://pay.vatione.cn/">进入华纯易支付</a></span></p>
 			</div>
 		</section>
 			<script>
